--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -1,21 +1,90 @@
-.cards{
+.cards_containers{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+}.cards{
   display: flex;
   flex-direction: column;
+  align-content: flex-start;
   border: solid;
-  max-width:40em;
-  max-height: 20em;
+  width:25em;
+  height: 24.5em;
   margin: 0.5em;
   overflow: hidden;
 }
-  .cards_containers{
-  display: flex;
-  flex-wrap: wrap;
-}
+
 .card_title{
+  height: auto;
+  margin: 0.5em;
+  display: flex;
 }
-.container_pic{
+.card_title >h3> u{
+  font-size: 0.7em;
+  margin-left: 0.5em;
+  font-style: italic;
+}
+.card_body{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 .card_pic{
+  flex:1;
+  margin: auto;
+}
+.card_pic >img{
   object-fit: contain;
-  width: 40%;
+  height: 15em;
+  width: 24em;
+}
+.card_description{
+  flex:2;
+  margin: 0.5em;
+  display: -webkit-box;
+  max-height: 6em;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.popup_movie_details {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.popup_content{
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.popup_body{
+  display:flex;
+}
+.popup_paragraph{
+  display: flex;
+  flex-direction: column;
+
 }
