--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 70%;
+  margin:0;
+}
+.HeaderBar{
+  display: flex;
+  width: 100%;
+  height: 8em;
+  background-color: teal;
+  justify-content: center;
+}
+.Body{
+  width: 80%;
   margin:auto;
-
 }
