--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -61,30 +61,75 @@
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 .popup_content{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  padding:1em;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
+  max-height: auto;
 }
 .close {
   color: #aaa;
   float: right;
-  font-size: 28px;
+  font-size: 1.5em;
   font-weight: bold;
+  max-width:50%;
+  text-align: right;
+  position: absolute;
+  right: 15%;
 }
-
 .close:hover,
 .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
 }
-.popup_body{
-  display:flex;
-}
 .popup_paragraph{
   display: flex;
   flex-direction: column;
-
+  max-width: 20em;
+}
+.popup_title{
+  display: flex;
+  flex-flow: wrap row;
+  width: 100%;
+}
+.popup_title >p{
+  margin-top:auto;
+  margin-left: 1em;
+  color: green;
+  font-size: 1.2em;
+  font-style:italic;
+  max-width: fit-content;
+}
+h3{
+  font-size: 1.5em;
+}
+.u{
+  font-size: 0.8em;
+  font-style: italic;
+}
+.popup_title u{
+  font-size: 0.8em;
+}
+.popup_paragraph{
+  max-width: 30em;
+  height: 100%;
+  margin-left:1em;
+}
+.popup_pic{
+  max-width:100%;
+}
+.popup_pic img{
+  object-fit: cover;
+  max-width:100%;
+}
+.popup_body{
+  display:flex;
+  flex-flow: row wrap;
+  max-width:100%;
+  max-height:auto;
 }
