--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -1,17 +1,29 @@
+@import './popup.css';
+.Body{
+  margin-top: 1.5em;
+}
 .cards_containers{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 
-}.cards{
+}
+.cards{
   display: flex;
   flex-direction: column;
   align-content: flex-start;
   border: solid;
+  color: rgb(99, 0, 0);
+
+  border-radius: 0.2em;
   width:25em;
-  height: 24.5em;
+  height: 25em;
   margin: 0.5em;
   overflow: hidden;
+}
+.cards:hover{
+  border-radius: 0.8em;
+  color:rgb(230, 166, 5);
 }
 
 .card_title{
@@ -33,11 +45,12 @@
 .card_pic{
   flex:1;
   margin: auto;
+  background-color: black;
 }
 .card_pic >img{
   object-fit: contain;
-  height: 15em;
-  width: 24em;
+  height: 16em;
+  width: 100%;
 }
 .card_description{
   flex:2;
@@ -48,88 +61,11 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-.popup_movie_details {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-.popup_content{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding:1em;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-  max-height: auto;
-}
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 1.5em;
-  font-weight: bold;
-  max-width:50%;
-  text-align: right;
-  position: absolute;
-  right: 15%;
-}
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-.popup_paragraph{
-  display: flex;
-  flex-direction: column;
-  max-width: 20em;
-}
-.popup_title{
-  display: flex;
-  flex-flow: wrap row;
-  width: 100%;
-}
-.popup_title >p{
-  margin-top:auto;
-  margin-left: 1em;
-  color: green;
-  font-size: 1.2em;
-  font-style:italic;
-  max-width: fit-content;
-}
 h3{
   font-size: 1.5em;
+  margin-bottom: auto;
 }
 .u{
   font-size: 0.8em;
   font-style: italic;
-}
-.popup_title u{
-  font-size: 0.8em;
-}
-.popup_paragraph{
-  max-width: 30em;
-  height: 100%;
-  margin-left:1em;
-}
-.popup_pic{
-  max-width:100%;
-}
-.popup_pic img{
-  object-fit: cover;
-  max-width:100%;
-}
-.popup_body{
-  display:flex;
-  flex-flow: row wrap;
-  max-width:100%;
-  max-height:auto;
 }
