--- a/src/css/Headerbar.css
+++ b/src/css/Headerbar.css
@@ -17,10 +17,9 @@
   flex-direction: row;
 }
 .headBar button{
-  background-color: #103847;
+  background-color:#7d1919;
   border: none;
   border-bottom: none;
-  color: white;
   text-align: center;
   font-size: 16px;
   margin: 0.2em;
@@ -29,8 +28,9 @@
   padding: 1em 2em;
   border-radius:0.5em;
   transition-duration: 0.4s;
+  width:100%;
+  height: 100%;
 }
 .headBar button:hover {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #773c3c;
 }
