--- a/src/css/Headerbar.css
+++ b/src/css/Headerbar.css
@@ -3,33 +3,27 @@
   flex-direction: row;
   width:80%;
   height:100%;
-  align-items: flex-end;
+  justify-content: space-between;
+  align-items: center;
 }
 .headBar > h1{
-  flex: 3;
-  margin: auto;
-  vertical-align: middle;
-
+  margin-top: auto;
+  margin-bottom: auto;
+  vertical-align: left;
+  font-size: 3em;
 }
-.button_list{
-  margin: 0;
-  display: flex;
-  flex-direction: row;
-}
-.headBar button{
+.headBar > button{
   background-color:#7d1919;
   border: none;
   border-bottom: none;
   text-align: center;
   font-size: 16px;
-  margin: 0.2em;
-  margin-bottom: 0;
   cursor: pointer;
   padding: 1em 2em;
   border-radius:0.5em;
   transition-duration: 0.4s;
-  width:100%;
-  height: 100%;
+  width:5em;
+  height: 5em;
 }
 .headBar button:hover {
   background-color: #773c3c;
