--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "JackInput";
+  font-family: "(JackInput)";
   src: url("./fonts/JackInput.TTF") format("truetype")
  }
 
